fix contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -44,8 +44,8 @@ header {
   width: 100%;
   max-width: 120px;
   height: 40px;
-  background-color: red;
-  color: white;
+  background-color: #d8bd8a;
+  color: black;
   border: 1px solid;
   border-radius: 15%;
   text-decoration: none;
@@ -53,6 +53,7 @@ header {
   padding-top: 10px;
   align-items: center;
   margin: 15px auto;
+  font-weight: bold;
 }
 
 .join-button a:hover {
@@ -89,14 +90,14 @@ nav a {
 }
 
 nav ul li a:hover {
-  color: #b2ff00;
+  color: #f2af29;
   font-weight: bold;
 }
 
 .our-info h2 {
   margin-top: 15px;
   margin-bottom: 0px;
-  color: rgb(6, 141, 89);
+  color: blue;
   text-align: center;
 }
 
@@ -122,7 +123,7 @@ nav ul li a:hover {
 }
 
 .card a:hover {
-  color: rgb(6, 141, 89);
+  color: #f2af29;
   font-weight: bold;
 }
 
